# GymDashboardREACT

./: .env  .gitignore  README.md  benefits.txt  package-lock.json
backend/: README.md  alembic.ini  conftest.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4e170385f769_initial_migration.py
backend/app/: backend_pre_start.py  backup_db.py  config.py  database.py  database_engine.py  main.py  security.py  tests_pre_start.py
backend/app/api/activities/: activity.py
backend/app/api/auth/: admin.py  login.py
backend/app/api/exercies/: exercise.py
backend/app/api/items/: item.py
backend/app/api/users/: users.py
backend/app/crud/auth/: user.py
backend/app/crud/exercies/: exercise.py
backend/app/crud/items/: item.py
backend/app/models/: activity.py  auth.py  exercise.py  item.py  message.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_activity.py  test_exercies.py  test_items.py  test_login.py  test_private.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/app/tests/utils/: exercise.py  item.py  user.py  utils.py
backend/app/utils/: auth.py  auth_utils.py  email.py  mail.py
frontend/: openapi-ts.config.ts  package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts  theme.tsx
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: _layout.tsx  (+4 more)
frontend/tests/: auth.setup.ts  login.spec.ts
(+36 files in other folders)
